--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div class="container">
         <h1>Happy Birthday, João!</h1>
         <img src="https://images.nintendolife.com/fb0b955dbb1d0/botw.original.jpg" alt="Zelda Image">
-        <p>Wishing you an adventurous and magical birthday inspired by The Legend of Zelda: Breath of the Wild. May your journey be filled with joy, excitement, and unforgettable experiences!</p>
-        <p>From your friend,</p>
-        <p class="signature">Your Name</p>
+        <p>Te desejo tudo de bom John, aproveite esse seu mais novo ano de vida com muita sabedoria, virtude, alegria e ENERGIA. Que dê tudo certo na faculdade, no trabalho, no crack, no namoro e que você viva uma vida muito incrível. Seu primo te ama.</p>
+        <p>Do seu primo,</p>
+        <p class="signature">Vitão</p>
     </div>
 </body>
 </html>
