--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Happy Birthday, João!</h1>
+        <h1>Feliz níver, João!</h1>
         <img src="https://images.nintendolife.com/fb0b955dbb1d0/botw.original.jpg" alt="Zelda Image">
-        <p>Te desejo tudo de bom John, aproveite esse seu mais novo ano de vida com muita sabedoria, virtude, alegria e ENERGIA. Que dê tudo certo na faculdade, no trabalho, no crack, no namoro e que você viva uma vida muito incrível. Seu primo te ama.</p>
+        <p>Te desejo tudo de bom, João! Aproveite esse seu mais novo ano de vida com muita sabedoria, virtude, alegria e ENERGIA. Que tudo dê certo na faculdade, no trabalho, no lazer, no namoro, e que você viva uma vida incrível.</p>
         <p>Do seu primo,</p>
         <p class="signature">Vitão</p>
+        <img src="https://i.redd.it/u54w1l97a7o91.jpg" alt="Zelda Sticker 1">
+        <img src="https://preview.redd.it/new-official-art-for-totk-v0-ccq7glrp42ha1.jpg?width=1080&crop=smart&auto=webp&s=a8eb6193d7e5f3de55c17a611ff17c6fbdc6dec8" alt="Zelda Sticker 2">
     </div>
 </body>
 </html>
